--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,7 @@
 ---
+const CLIENT_ID = import.meta.env.VITE_CLIENT_ID
+const REDIRECT_URI = import.meta.env.VITE_REDIRECT_URI
+https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1234567890&redirect_uri=https%3A%2F%2Fexample.com%2Fauth%3Fkey%3Dvalue&state=12345abcde&scope=profile%20openid&nonce=09876xyz
 
 ---
 
@@ -12,5 +15,11 @@
 	</head>
 	<body>
 		<h1>LINE Login</h1>
+		<a href="">LINEでログインする</a>
+		<p>ID：{CLIENT_ID}</p>
+		<p>URI：{REDIRECT_URI}</p>
 	</body>
 </html>
+
+
+
