--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 const CLIENT_ID = import.meta.env.VITE_CLIENT_ID
 const REDIRECT_URI = import.meta.env.VITE_REDIRECT_URI
-https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=1234567890&redirect_uri=https%3A%2F%2Fexample.com%2Fauth%3Fkey%3Dvalue&state=12345abcde&scope=profile%20openid&nonce=09876xyz
+const LOGIN_URL = `https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=${CLIENT_ID}&redirect_uri=${REDIRECT_URI}&state=12345abcde&scope=profile%20openid&nonce=09876xyz`
 
 ---
 
@@ -15,7 +15,7 @@ https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=123456
 	</head>
 	<body>
 		<h1>LINE Login</h1>
-		<a href="">LINEでログインする</a>
+		<a href={LOGIN_URL} target="_blank">LINEでログインする</a>
 		<p>ID：{CLIENT_ID}</p>
 		<p>URI：{REDIRECT_URI}</p>
 	</body>
