--- a/src/pages/after-login.astro
+++ b/src/pages/after-login.astro
@@ -1,5 +1,5 @@
 ---
-export const prerender = true;
+// export const prerender = true;
 // import {CLIENT_ID, REDIRECT_URI} from "./index.astro"
 // const CLIENT_SECRET = import.meta.env.VITE_CLIENT_SECRET
 // let CODE: any;
