--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-export const CLIENT_ID = import.meta.env.VITE_CLIENT_ID
-export const REDIRECT_URI = import.meta.env.VITE_REDIRECT_URI
-const LOGIN_URL = `https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=${CLIENT_ID}&redirect_uri=${REDIRECT_URI}&state=12345abcde&scope=profile%20openid&nonce=09876xyz`
+// export const CLIENT_ID = import.meta.env.VITE_CLIENT_ID
+// export const REDIRECT_URI = import.meta.env.VITE_REDIRECT_URI
+// const LOGIN_URL = `https://access.line.me/oauth2/v2.1/authorize?response_type=code&client_id=${CLIENT_ID}&redirect_uri=${REDIRECT_URI}&state=12345abcde&scope=profile%20openid&nonce=09876xyz`
 ---
 
 <html lang="ja">
@@ -14,7 +14,7 @@ const LOGIN_URL = `https://access.line.me/oauth2/v2.1/authorize?response_type=co
 	</head>
 	<body>
 		<h1>LINE Login</h1>
-		<a href={LOGIN_URL} target="_blank">LINEでログインする</a>
+		<!-- <a href={LOGIN_URL} target="_blank">LINEでログインする</a> -->
 	</body>
 </html>
 
