--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>LINE Login</h1>
+		<h1>LINE ログイン</h1>
 		<!-- <a href={LOGIN_URL} target="_blank">LINEでログインする</a> -->
 	</body>
 </html>
